[build-system]
requires = [
    "setuptools >= 64",
    "setuptools_scm >= 6.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "event_ruler"
version = "0.1.0"
description = "Testing EventBridge pattern locally"
readme = "README.md"
authors = [
    {name = "Tuan Anh Tran", email = "me@tuananh.org"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">= 3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/tuananh/py-event-ruler"
Issues = "https://github.com/tuananh/py-event-ruler/issues"